--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.10.1",
+    "react-window": "^2.2.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
