--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
+    "@tanstack/react-virtual": "^3.13.17",
     "axios": "^1.13.2",
     "cookie": "^1.1.1",
     "isbot": "^5.1.31",
@@ -19,7 +20,6 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.10.1",
-    "react-window": "^2.2.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
