--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,10 @@
 command = "npm run build"
 publish = "build/client"
 
+[functions]
+directory = "netlify/functions"
+
 [[redirects]]
 from = "/*"
-to = "/.netlify/functions/server"
+to = "/.netlify/functions/react-router-server"
 status = 200
