--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,6 @@
 [build]
-command = "npm run build"
+command = "react-router build"
 publish = "build/client"
 
-[functions]
-directory = "netlify/functions"
-
-[[redirects]]
-from = "/*"
-to = "/.netlify/functions/react-router-server"
-status = 200
+[dev]
+command = "react-router dev"
