--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@netlify/vite-plugin-react-router": "^2.1.3",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
     "@tanstack/react-virtual": "^3.13.17",
@@ -24,8 +25,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@netlify/functions": "^5.1.2",
-    "@netlify/vite-plugin-react-router": "^2.1.3",
+    "@netlify/vite-plugin": "^2.10.0",
     "@react-router/dev": "7.10.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/lunr": "^2.3.7",
