--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@netlify/vite-plugin-react-router": "^2.1.3",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
     "@tanstack/react-virtual": "^3.13.17",
     "axios": "^1.13.2",
     "cookie": "^1.1.1",
+    "gsap": "^3.14.2",
     "isbot": "^5.1.31",
     "js-cookie": "^3.0.5",
     "lunr": "^2.3.9",
